fixed x-overflow prob and smooth scroll on safari

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,12 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
